# UNIHACK-Project

./: .gitignore  README.md  astro.config.mjs  components.json  main.py  package.json  package.ps1  pnpm-lock.yaml
.github/workflows/: deploy.yml
chrome_extension/: background.js  manifest.json  popup.html  popup.js
chrome_extension2/: background.js  content.js  manifest.json  mascot.css
desktop/: ResponsibilityMascot.spec  ai_inference.py  animation.py  idle.py  main.py  main.spec  package.ps1  pyproject.toml
firefox_extension/: README.md  background.js  browser-api.js  manifest.json  popup.html  popup.js
src/styles/: global.css
